# med-lm-eval

./: pyproject.toml
environments/agentclinic/: README.md  agentclinic_chat.py  agentclinic_response.py  pyproject.toml  responses_api_utils.py
environments/medcalc_bench/: README.md  medcalc_bench.py  pyproject.toml
medarc_verifiers/parsers/: __init__.py
medarc_verifiers/utils/: token_tracker.py
rl_training/: .gitignore  README_MINIMAL.md
rl_training/configs/: medqa-baseline.toml
rl_training/scripts/: evaluate.py  setup_runpod.sh
tests/: test_xml_parser.py
