[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentclinic"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers",
    "datasets",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.entry-points."verifiers.environments"]
agentclinic_response = "agentclinic_response:load_environment"
# agentclinic_chat = "agentclinic_chat:load_environment"
